# mesos-plugins

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindMesos.cmake  FindProtobuf.cmake
src/: CMakeLists.txt
src/epoll-logger/: epoll_logger.cpp  epoll_logger_flags.hpp  libepoll_logger.cpp
src/forward-logger/: libforward_logger.cpp
src/lib/: fd.cpp  fd.hpp
